k8s/services/mastodon/app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - social.lama-corp.space
  rules:
    - matches:
        - path:
            value: /api/v1/streaming
      backendRefs:
        - name: mastodon-streaming
          port: 80
    - matches:
        - path:
            value: /
      backendRefs:
        - name: mastodon-web
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon-webfinger
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - lama-corp.space
  rules:
    - matches:
        - path:
            value: /.well-known/webfinger
        - path:
            value: /.well-known/host-meta
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Access-Control-Allow-Origin
                value: "*"
        - type: RequestRedirect
          requestRedirect:
            hostname: social.lama-corp.space
            statusCode: 301
