k8s/services/mastodon/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: social.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastodon-web
                port:
                  name: http
          - path: /api/v1/streaming
            pathType: Prefix
            backend:
              service:
                name: mastodon-streaming
                port:
                  name: streaming
  tls:
    - hosts:
        - social.lama-corp.space
      secretName: mastodon-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-webfinger
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Origin '*';
      return 301 https://social.lama-corp.space$request_uri;
spec:
  rules:
    - host: lama-corp.space
      http:
        paths:
          - path: /.well-known/webfinger
            pathType: Prefix
            backend:
              service:
                name: invalid
                port:
                  name: invalid
          - path: /.well-known/host-meta
            pathType: Prefix
            backend:
              service:
                name: invalid
                port:
                  name: invalid
  tls:
    - hosts:
        - lama-corp.space
      secretName: mastodon-webfinger-tls
